Add dotenv and request

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <li>Thu. 12/26/19 - DOM, Dice Game, Advanced JS, Blackjack Trainer</li>
     <li>Fri. 12/27/19 - jQuery, Command Line</li>
     <li>Sat. 12/28/19 - Simon Game, Back End, Node, Express, Starter Kit</li>
-    <li>Sun. 12/29/19 - Git?, Databases?</li>
+    <li>Sun. 12/29/19 - Git, cURL</li>
+    <li>Wed. 1/1/20 - 10JS: Loops</li>
+    <li>Thu. 1/2/20 - API Calls, dotenv, request, MailChimp, Heroku</li>
   </ul>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
