--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
     <li>Sun. 12/29/19 - Git, cURL</li>
     <li>Wed. 1/1/20 - 10JS: Loops</li>
     <li>Thu. 1/2/20 - API Calls, dotenv, request, MailChimp, Heroku</li>
+    <li>Fri. 1/3/20 - EJS</li>
+    <li>Sat. 1/4/20 - EJS</li>
   </ul>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <!-- <script src="index.js" charset="utf-8"></script> -->
+  <!-- <script src="app.js" charset="utf-8"></script> -->
 </body>
 
 </html>
