--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     <li><b>Node.js: </b>Node is a run-time environment that allows you to execute JavaScript outside of the browser in a standalone application.</li>
     <li><b>Express.js: </b>Express is server framework used with NodeJS. It helps you manage everything, from routes, to handling requests and views.</li>
     <li><b>Body Parser: </b>Body Parser allows you to extract the entire body portion of an incoming request and exposes it on req.body. Used with Express.</li>
+    <li><b>Request: </b>Request is a module that provides a simple way to make http calls to 3rd-party APIs. Used with NodeJS.</li>
+    <li><b>Dotenv: </b>Dotenv loads environment variables from a .env file into process.env so that you can store things like secret API keys.</li>
+    <li><b>EJS: </b>EJS is a simple templating language that lets you generate HTML markup with plain JavaScript.</li>
   </ul>
   <h4>Helper Programs</h4>
   <ul>
     <li><b>Git: </b></li>
     <li><b>Nodemon: </b></li>
+    <li><b>Heroku: </b></li>
   </ul>
   <h4>Accomplishments</h4>
   <ul>
@@ -38,7 +42,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <!-- <script src="app.js" charset="utf-8"></script> -->
+  <script src="app.js" charset="utf-8"></script>
 </body>
 
 </html>
